# framework.appfw.slp-pkgmgr

./: .gitignore  710.pkgmgr.patch.sh.in  CMakeLists.txt  com.samsung.slp.pkgmgr.service.mobile.in  com.samsung.slp.pkgmgr.service.wearable.in  org.tizen.pkgmgr.service.in  pkgmgr-installer.manifest  pkgmgr-server.manifest  pkgmgr-soft-reset-ui.sh.in  pkgmgr.manifest  slp-pkgmgr.service
TC/: build.sh  com.samsung.hello-0.0.1-0.armv7l.rpm
TC/unit/: Makefile  tslist  utc_ApplicationFW_pkgmgr_client_activate_func.c  utc_ApplicationFW_pkgmgr_client_broadcast_status_func.c  utc_ApplicationFW_pkgmgr_client_clear_user_data_func.c  utc_ApplicationFW_pkgmgr_client_deactivate_func.c  utc_ApplicationFW_pkgmgr_client_free_func.c  utc_ApplicationFW_pkgmgr_client_install_func.c  utc_ApplicationFW_pkgmgr_client_listen_status_func.c  utc_ApplicationFW_pkgmgr_client_move_func.c  utc_ApplicationFW_pkgmgr_client_new_func.c  utc_ApplicationFW_pkgmgr_client_uninstall_func.c  utc_ApplicationFW_pkgmgr_get_pkg_list_func.c  utc_ApplicationFW_pkgmgr_info_free_func.c  utc_ApplicationFW_pkgmgr_info_get_string_func.c  utc_ApplicationFW_pkgmgr_info_new_from_file_func.c  utc_ApplicationFW_pkgmgr_info_new_func.c  utc_ApplicationFW_pkgmgr_installer_free_func.c  utc_ApplicationFW_pkgmgr_installer_get_license_path_func.c  utc_ApplicationFW_pkgmgr_installer_get_move_type_func.c  utc_ApplicationFW_pkgmgr_installer_get_request_info_func.c  utc_ApplicationFW_pkgmgr_installer_get_request_type_func.c  utc_ApplicationFW_pkgmgr_installer_get_session_id_func.c  utc_ApplicationFW_pkgmgr_installer_is_quiet_func.c  utc_ApplicationFW_pkgmgr_installer_new_func.c  utc_ApplicationFW_pkgmgr_installer_receive_request_func.c  utc_ApplicationFW_pkgmgr_installer_send_signal_func.c
client/include/: package-manager-zone.h  package-manager.h  pkgmgr-internal.h
client/src/: pkgmgr-internal.c  pkgmgr.c
comm/: CMakeLists.txt  comm_client.c  comm_client.h  comm_client_dbus.c  comm_client_gdbus.c  comm_config.h  comm_internal.c  comm_internal.h  comm_pkg_mgr.xml  comm_pkg_mgr_ext.xml  comm_pkg_mgr_server.c  comm_pkg_mgr_server.h  comm_socket.c  comm_status_broadcast.xml  comm_status_broadcast_server_dbus.c  pkgmgr-installer-pkg-mgr-server.pc.in  pkgmgr_installer.c  pkgmgr_installer.h  pkgmgr_installer_config.h
comm/test/: test_comm_client.c
debian/: pkgmgr-server.install.in
include/: SLP_package_manager_PG.h  junk-manager.h  package-manager-debug.h  package-manager-internal.h  package-manager-zone.h
installers/sample/: sample_backend.c  sample_parserlib.c
packaging/: pkgmgr-mobile.manifest  pkgmgr-server-wearable.manifest  pkgmgr-wearable.manifest  pkgmgr.spec  pkgmgr_recovery.service
po/: CMakeLists.txt
server/src/: pkgmgr-server.c  pkgmgr_external_storage.c  pkgmgr_external_storage.h  pm-queue.c
tool/: CMakeLists.txt  com.samsung.pkgmgr-install.xml.in  org.tizen.pkgmgr-install.xml.in  pkg.c  pkg.h  pkg_clearcache.c  pkg_cmd.c  pkg_fota.c  pkg_getjunkinfo.c  pkg_getsize.c  pkg_info.c  pkg_initdb.c  pkg_magic.c  pkg_magic.h  pkg_mkext.c  pkg_recovery.sh.in  pkgmgr-install.c  test_junk.c
types/include/: package-manager-types.h
